--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ fastapi==0.103.0
 uvicorn==0.23.2
 python-dotenv==1.0.0
 openai==1.3.0
-pydantic==2.3.0
+pydantic==2.9.2   # or just >=2.9,<3.0
 python-multipart==0.0.6
+
